--- a/Directive/questionList/questionList.html
+++ b/Directive/questionList/questionList.html
@@ -2,14 +2,14 @@
     <table width="70%" style="margin:5px auto;">
         <tbody style="text-align:left">
             <tr><td style="width:120px;" align="center"><img src="resource/images/u4.png" /></td><td align="center" style="width:120px;"><img src="resource/images/u4_line.png" /></td><td style="width:120px;" align="center"><img src="resource/images/u4.png" /></td></tr>
-            <tr><td style="width:120px;" align="center">维护作业基本信息</td><td></td><td style="width:120px;" align="center">维护作业内容信息</td></tr>
+            <tr><td style="width:120px;" align="center">维护考卷基本信息</td><td></td><td style="width:120px;" align="center">维护考卷内容信息</td></tr>
         </tbody>
     </table>
 </div>
-<div style="margin-top:20px;font-size:18px;font-weight:bold;">作业内容信息</div>
+<div style="margin-top:20px;font-size:18px;font-weight:bold;">考卷内容信息</div>
 
 <div class="mt10">    
-    <label>题目添加方式：</label><button ng-show="showAddBtn" class="btnGreen" style="margin-left:20px;" ng-click="createQuestion();">添加题目</button><button ng-show="showAddBtn" class="btnGreen" style="margin-left:20px;width:150px;" ng-click="copyItem();">选择现有作业题目</button>
+    <label>题目添加方式：</label><button ng-show="showAddBtn" class="btnGreen" style="margin-left:20px;" ng-click="createQuestion();">添加题目</button><button ng-show="showAddBtn" class="btnGreen" style="margin-left:20px;width:150px;" ng-click="copyItem();">选择现有考卷题目</button>
 </div>
 
 
