--- a/Module/SafeClassRoom/main/safeMain.html
+++ b/Module/SafeClassRoom/main/safeMain.html
@@ -28,10 +28,10 @@
         <div class="menuItem">
             <div class="title">
                 <img class="menuIcon" src="resource/images/analyze.jpg" />
-                <span>作业管理</span>
+                <span>考卷管理</span>
             </div>
             <ol class="clearfix">
-                <li ui-sref="safeRoom.homeworkList">作业管理</li>
+                <li ui-sref="safeRoom.homeworkList">考卷管理</li>
                 <li ui-sref="safeRoom.lessons">授课记录</li>
             </ol>
         </div>       
