--- a/Directive/selectHomework/selectHomework.html
+++ b/Directive/selectHomework/selectHomework.html
@@ -1,17 +1,17 @@
 <div class="searchRow clearfix">
     <div class="left mr15">
-        <label>作业标题：</label>
-        <input type="text" placeholder="作业标题" class="width150" ng-model="Title" />
+        <label>考卷标题：</label>
+        <input type="text" placeholder="考卷标题" class="width150" ng-model="Title" />
 
     </div>
     <div class="left mr15">
-        <label>作业编码：</label>
-        <input type="text" placeholder="作业编码" class="width150" ng-model="queryHomeworkID" />
+        <label>考卷编码：</label>
+        <input type="text" placeholder="考卷编码" class="width150" ng-model="queryHomeworkID" />
 
     </div>
 
     <div class="left mr15">
-        <label>作业类型：</label>
+        <label>考卷类型：</label>
         <select class="width140" ng-model="homeworkType" ng-options="m.code as m.name for m in wxHomeworkType"></select>
     </div>
 </div>
@@ -31,10 +31,11 @@
     <thead>
     <tr> 
         <th>选择</th>
-        <th>作业编码</th>
-        <th>作业标题</th>
+        <th>考卷编码</th>
+        <th>考卷标题</th>
+        <th>课程编码</th>
         <th>课程标题</th>
-        <th>作业类型</th>
+        <th>考卷类型</th>
     </tr>
     </thead>
 
@@ -43,9 +44,10 @@
             <td width="5%"><input type="checkbox" ng-model="item.ck" /></td>
             <td style="word-wrap:break-word;" width="10%">{{item.ID}}</td>
             <td style="word-wrap: break-word; word-break: break-all;" width="20%">{{item.Title}}</td>
+            <td style="word-wrap: break-word; word-break: break-all;" width="10%">{{item.CourseCode}}</td>
             <td style="word-wrap: break-word; word-break: break-all;" width="20%">{{item.CourseTitle}}</td>
             <td style="word-wrap:break-word;" width="10%" ng-if="item.HomeworkType==0">基础模板</td>
-            <td style="word-wrap:break-word;" width="10%" ng-if="item.HomeworkType==1">普通作业</td>
+            <td style="word-wrap:break-word;" width="10%" ng-if="item.HomeworkType==1">普通考卷</td>
         </tr>
     </tbody>
 </table>
