--- a/Module/SafeClassRoom/question/createQuestion.html
+++ b/Module/SafeClassRoom/question/createQuestion.html
@@ -1,4 +1,4 @@
-<div class="navigation">我的应用 > 作业管理 > {{t_title}}</div>
+<div class="navigation">我的应用 > 考卷管理 > {{t_title}}</div>
 
 
 <div class="clearfix" style="height:200px;">
