--- a/Module/SafeClassRoom/main/safeMain.html
+++ b/Module/SafeClassRoom/main/safeMain.html
@@ -97,6 +97,18 @@
             		<li><a target="_blank" href="http://class.zhongguoanquanjiaoyu.com/file/sf.mp4">信息采集</a></li>
             </ol>
         </div>
+
+        <div class="menuItem">
+            <div class="title">
+                <img class="menuIcon" src="resource/images/analyze.jpg"/>
+                <span>工地管理</span>
+            </div>
+            <ol class="clearfix">
+                <li ui-sref="safeRoom.train">培训列表</li>
+                <li ui-sref="safeRoom.report">数据报表</li>
+                <li ui-sref="safeRoom.score">老师评分</li>
+            </ol>
+        </div>
     </div>
 
     <div ui-view class="rightContent"></div>
