--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     <script src="Module/SafeClassRoom/analysis/analysis.controller.js"></script>
     <script src="Module/SafeClassRoom/homework/homework.controller.js"></script>
     <script src="Module/SafeClassRoom/question/question.controller.js"></script>
+    <script src="Module/SafeClassRoom/report/list.controller.js"></script>
+    <script src="Module/SafeClassRoom/score/list.controller.js"></script>
+    <script src="Module/SafeClassRoom/train/list.controller.js"></script>
 
     <!-- 教育机构管理系统 -->
     <!--<script src="Module/RoomManagement/main/managerment.router.js"></script>-->
@@ -59,6 +62,7 @@
     <script src="Directive/questionItemList/questionItemList.directive.js"></script>
     <script src="Directive/memberHomeworkList/memberHomeworkList.directive.js"></script>
     <script src="Directive/selectHomework/selectHomework.directive.js"></script>
+    <script src="Directive/tableList/tableKiller.directive.js"></script>
 </head>
 <body>
     <navigation></navigation>
