--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8">
     <title></title>
     <link href="app.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="resource/css/bootstrap.css">
     <link rel="stylesheet" href="resource/css/ngDialog.css">
     <link rel="stylesheet" href="resource/css/ngDialog-theme-default.css">
     <link rel="stylesheet" href="resource/css/ngDialog-theme-tablelist.css">
 
     <script src="resource/lib/jquery-1.11.2.min.js"></script>
     <script src="resource/lib/ajaxfileupload.js"></script>
-    <script src="resource/lib/highcharts.js"></script>
-    <script src="resource/lib/exporting.js"></script>
     <script src="resource/lib/jq.qrcode.min.js"></script>
 
     <script src="resource/lib/angular.js"></script>
