--- a/Module/SafeClassRoom/report/list.html
+++ b/Module/SafeClassRoom/report/list.html
@@ -1,33 +1,45 @@
 <div class="navigation">我的应用 > 数据报表</div>
-
 <div class="searchRow clearfix">
     <div class="left mr15">
-        <label>模版分类：</label>
-        <select class="width287" ng-model="selectType" ng-options="m.code as m.name for m in templateTypes"></select>
+        <label>选择考卷：</label>
+        <select ng-options="m.code as m.name for m in homeWorks" class="width287" ng-model="homeworkId"></select>
+    </div>
+    <div class="left mr15">
+        <label>身份证：</label>
+        <input type="text" ng-model="cardNo" class="width287" />
     </div>
 
     <div class="left">
-        <label>创建时间：</label>
-        <input type="date" placeholder="请选择开始时间" class="width150" ng-model="beginDate"/>
-        <span> 到 </span>
-        <input type="date" placeholder="请选择结束时间" class="width150" ng-model="endDate"/>
-    </div>
-</div>
-
-<div class="searchRow clearfix">
-    <div class="left mr15">
-        <label>模版类型：</label>
-        <select class="width287" ng-model="selectCate" ng-options="m.code as m.name for m in templateCates"></select>
-    </div>
-    <div class="left">
-        <label>模版名称：</label>
-        <input type="text" placeholder="请输入模版名称" class="width287" ng-model="templateName"/>
+        <label>考试日期：</label>
+        <input type="date" class="width150" ng-model="beginTime"/>
+        <span>---- </span>
+        <input type="date" class="width150" ng-model="endTime"/>
     </div>
 </div>
 
 <div class="mt10">
-    <button class="btnGreen ml65" ng-click="search();">查询</button>
-    <button class="btnGreen" ng-click="export();">导出</button>
+    <button class="btnGreen ml65" ng-click="search();">加载数据</button>
+    <button class="btnGreen ml65" ng-click="export();">导出</button>
 </div>
 
-<div class="grayLine"></div>
+<div class="table_kill mt10">
+    <table class="table table-bordered">
+        <thead>
+        <tr>
+            <th ng-repeat="x in cols track by $index" class="text-center">{{x.name}}</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="item in list track by $index" >
+            <td ng-repeat="s in cols track by $index" class="text-center">
+                {{item[s.key]}}
+            </td>
+        </tr>
+        </tbody>
+    </table>
+
+    <div class="pagingContainer clearfix">
+        <paging-module callback-fn="cbForPaging" get-url="getUrl" do-load="load" analysis="analysis" paging-option="pOption"></paging-module>
+    </div>
+
+</div>
