--- a/Module/SafeClassRoom/main/safeMain.html
+++ b/Module/SafeClassRoom/main/safeMain.html
@@ -32,7 +32,7 @@
             </div>
             <ol class="clearfix">
                 <li ui-sref="safeRoom.homeworkList">考卷管理</li>
-                <li ui-sref="safeRoom.lessons">授课记录</li>
+                <!--<li ui-sref="safeRoom.lessons">授课记录</li>-->
             </ol>
         </div>       
         <!--<div class="menuItem">-->
