--- a/Module/SafeClassRoom/main/safeMain.html
+++ b/Module/SafeClassRoom/main/safeMain.html
@@ -60,7 +60,7 @@
             <!--</ol>-->
         <!--</div>-->
 
-        <div class="menuItem lastItem" ng-show="$root.menuCtrl">
+        <div class="menuItem lastItem" ng-show="false">
             <div class="title">
                 <img class="menuIcon" src="resource/images/user.jpg"/>
                 <span>用户管理</span>
