--- a/Module/SafeClassRoom/main/safeMain.html
+++ b/Module/SafeClassRoom/main/safeMain.html
@@ -15,7 +15,7 @@
             <!--</ol>-->
         <!--</div>-->
 
-        <div class="menuItem" ng-show="!$root.menuCtrl">
+        <div class="menuItem">
             <div class="title">
                 <img class="menuIcon" src="resource/images/module.jpg"/>
                 <span>教师备课</span>
