--- a/company.html
+++ b/company.html
@@ -121,7 +121,7 @@
     function setOption(a,b,c,d){
         var option  = {
             title : {
-                text: '某站点用户访问来源',
+                text: '综合统计',
                 x:'center'
             },
             tooltip : {
