--- a/Module/SafeClassRoom/main/safeMain.html
+++ b/Module/SafeClassRoom/main/safeMain.html
@@ -25,7 +25,7 @@
             </ol>
         </div>
 
-        <div class="menuItem">
+        <div class="menuItem" ng-show="false">
             <div class="title">
                 <img class="menuIcon" src="resource/images/analyze.jpg" />
                 <span>考卷管理</span>
@@ -34,7 +34,7 @@
                 <li ui-sref="safeRoom.homeworkList">考卷管理</li>
                 <!--<li ui-sref="safeRoom.lessons">授课记录</li>-->
             </ol>
-        </div>       
+        </div>
         <!--<div class="menuItem">-->
         <!--<div class="title">-->
         <!--<img class="menuIcon" src="resource/images/active.jpg"/>-->
@@ -88,7 +88,7 @@
             </ol>
         </div>
         
-        <div class="menuItem">
+        <div class="menuItem" ng-show="false">
             <div class="title">
                 <img class="menuIcon" src="resource/images/analyze.jpg"/>
                 <span>信息采集</span>
@@ -105,8 +105,8 @@
             </div>
             <ol class="clearfix">
                 <li ui-sref="safeRoom.train">培训列表</li>
-                <li ui-sref="safeRoom.report">数据报表</li>
-                <li ui-sref="safeRoom.score">老师评分</li>
+                <!--<li ui-sref="safeRoom.report">数据报表</li>-->
+                <!--<li ui-sref="safeRoom.score">老师评分</li>-->
             </ol>
         </div>
     </div>
